# log-view

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-deb.yml
configuration/: cfg.json
src/: log_view.cpp  log_view.hpp  main.cpp
systemd/: log-view.service
